--- a/aMyTest/demo7.7.html
+++ b/aMyTest/demo7.7.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>旋转造型LatheGeometry</title>
+	<title>Shape对象和轮廓填充ShapeGeometry</title>
 	<style>
 		body {
 			margin: 0;
@@ -27,38 +27,120 @@
 	var scene = new THREE.Scene();
 
 
-	// 样条曲线插值计算
-	// 借助Shape对象的方法.splineThru()，把上面的三个顶点进行样条插值计算， 可以得到一个光滑的旋转曲面。
+	var points = [
+		new THREE.Vector2(-50, -50),
+		new THREE.Vector2(-60, 0),
+		new THREE.Vector2(0, 50),
+		new THREE.Vector2(60, 0),
+		new THREE.Vector2(50, -50),
+		new THREE.Vector2(-50, -50),
+	]
+/*	// 通过顶点定义轮廓
+	var shape = new THREE.Shape(points);
+	// shape可以理解为一个需要填充轮廓
+	// 所谓填充：ShapeGeometry算法利用顶点计算出三角面face3数据填充轮廓
+	var geometry = new THREE.ShapeGeometry(shape, 25);*/
 
-	var shape = new THREE.Shape();//创建Shape对象
-	var points = [//定位定点
-		new THREE.Vector2(50, 60),
-		new THREE.Vector2(25, 0),
-		new THREE.Vector2(50, -60)
-	];
-	shape.splineThru(points);//顶点带入样条插值计算函数
-	var splinePoints = shape.getPoints(20);//插值计算细分数20
-	var geometry = new THREE.LatheGeometry(splinePoints, 30);//旋转造型
+/*
+
+	// 通过shpae基类path的方法绘制轮廓（本质也是生成顶点）
+	var shape = new THREE.Shape();
+	shape.absarc(0,0,100,0,2*Math.PI);//圆弧轮廓
+	console.log(shape.getPoints(15));//查看shape顶点数据
+
+*/
+/*
+
+	// 通过shpae基类path的方法绘制轮廓（本质也是生成顶点）
+	var shape = new THREE.Shape();
+	// 四条直线绘制一个矩形轮廓
+	shape.moveTo(0,0);//起点
+	shape.lineTo(0,100);//第2点
+	shape.lineTo(100,100);//第3点
+	shape.lineTo(100,0);//第4点
+	shape.lineTo(0,0);//第5点
+
+*/
 
 
-	/**
-	 * 创建旋转网格模型
-	 */
-/*	var points = [
-		new THREE.Vector2(50, 60),
-		new THREE.Vector2(25, 0),
-		new THREE.Vector2(50, -60)
-	];
-	var geometry = new THREE.LatheGeometry(points, 30);
+/*	// 圆弧与直线连接
+	var shape = new THREE.Shape(); //Shape对象
+	var R = 50;
+	// 绘制一个半径为R、圆心坐标(0, 0)的半圆弧
+	shape.absarc(0, 0, R, 0, Math.PI);
+	//从圆弧的一个端点(-R, 0)到(-R, -200)绘制一条直线
+	shape.lineTo(-R, -200);
+	// // 绘制一个半径为R、圆心坐标(0, -200)的半圆弧
+	shape.absarc(0, -200, R, Math.PI, 2 * Math.PI);
+	// //从圆弧的一个端点(R, -200)到(-R, -200)绘制一条直线
+	shape.lineTo(R, 0);
 
 	*/
+/*
+
+        // 一个外轮廓圆弧嵌套三个内圆弧轮廓
+        var shape = new THREE.Shape(); //Shape对象
+        //外轮廓
+        shape.arc(0, 0, 100, 0, 2 * Math.PI);
+        // 内轮廓1
+        var path1 = new THREE.Path();
+        path1.arc(0, 0, 40, 0, 2 * Math.PI);
+        // 内轮廓2
+        var path2 = new THREE.Path();
+        path2.arc(80, 0, 10, 0, 2 * Math.PI);
+        // 内轮廓3
+        var path3 = new THREE.Path();
+        path3.arc(-80, 0, 10, 0, 2 * Math.PI);
+        //三个内轮廓分别插入到holes属性中
+        shape.holes.push(path1, path2, path3);
+
+    */
+
+/*
+
+	// 矩形嵌套矩形或圆弧
+	var shape=new THREE.Shape();//Shape对象
+	//外轮廓
+	shape.moveTo(0,0);//起点
+	shape.lineTo(0,100);//第2点
+	shape.lineTo(100,100);//第3点
+	shape.lineTo(100,0);//第4点
+	shape.lineTo(0,0);//第5点
+
+	//内轮廓
+	var path=new THREE.Path();//path对象
+	// path.arc(50,50,40,0,2*Math.PI);//圆弧
+	path.moveTo(20,20);//起点
+	path.lineTo(20,80);//第2点
+	path.lineTo(80,80);//第3点
+	path.lineTo(80,20);//第4点
+	path.lineTo(20,20);//第5点
+	shape.holes.push(path);//设置内轮廓
+*/
+
+/*
+	// 多个轮廓同时填充
+	// 轮廓对象1
+	var shape=new THREE.Shape();
+	shape.arc(-50,0,30,0,2*Math.PI);
+	// 轮廓对象2
+	var shape2=new THREE.Shape();
+	shape2.arc(50,0,30,0,2*Math.PI);
+	// 轮廓对象3
+	var shape3=new THREE.Shape();
+	shape3.arc(0,50,30,0,2*Math.PI);
+	// 多个shape作为元素组成数组,每一个shpae可以理解为一个要填充的轮廓
+	var geometry = new THREE.ShapeGeometry([shape,shape2,shape3], 30);
+
+*/
+
+
+	// var geometry = new THREE.ShapeGeometry(shape, 25);
 	var material = new THREE.MeshPhongMaterial({
 		color: 0x0000ff,//三角面颜色
 		side: THREE.DoubleSide//两面可见
 	});//材质对象
-	material.wireframe = true;//线条模式渲染(查看细分数)
-
-
+	// material.wireframe = true;//线条模式渲染(查看细分数)
 	var mesh = new THREE.Mesh(geometry, material);//旋转网格模型对象
 	scene.add(mesh);//旋转网格模型添加到场景中
 
