--- a/aMyTest/demo11test.html
+++ b/aMyTest/demo11test.html
@@ -29,68 +29,99 @@
 	var group = new THREE.Group();
 
 	var geometry = new THREE.Geometry(); //声明一个几何体对象Geometry
-	var p1 = new THREE.Vector3(0, 0, 0); //顶点1坐标
-	var p2 = new THREE.Vector3(100, 100, 0); //顶点2坐标
-	 var p3 = new THREE.Vector3(0, 0, 0); //顶点1坐标
-	var p4 = new THREE.Vector3(-100, 100, 0); //顶点2坐标
-	//顶点坐标添加到geometry对象
-	geometry.vertices.push(p1, p2);
-
-	var material = new THREE.LineBasicMaterial({
-		color: 0xffff00,
-	});//材质对象
-	//线条模型对象
-	var line = new THREE.Line(geometry, material);
-	geometry.vertices.push(p3, p4);
-	var line2 = new THREE.Line(geometry, material);
-	group.add(line); //线条对象添加到场景中
-	group.add(line2); //线条对象添加到场景中
 
 
+	var mesh1 = boxMesh("Box", 130, 30, 0);
 
+	var mesh2 = sphereMesh("Sphere", 0, 0, 0);
+	var mesh3 = boxMesh("Box3", -150, 150, 0);
+	var mesh4 = sphereMesh("Box4", 100, -100, 0);
+	var mesh5 = addTexture("aaaaa", 130, 130, 0);//sphereMesh("Box4", 100, -100, 0);
+	console.log("mersh5")
+	console.log(mesh4)
+	console.log(mesh5)
 
-	var mesh1 = boxMesh(10,10,10);
-	var mesh2 =sphereMesh(10,0,20,0);
-	var mesh3 = boxMesh(30,30,30);
-	var mesh4 =sphereMesh(10,0,20,0);
+	// mesh1.position.set(120, 120, 0);//设置mesh3模型对象的xyz坐标为120,0,0
+	// mesh3.position.set(-150, 100, 0);//设置mesh3模型对象的xyz坐标为120,0,0
+	// mesh4.position.set(100, -100, 0);//设置mesh3模型对象的xyz坐标为120,0,0
 
-	mesh1.position.set(120,120,0);//设置mesh3模型对象的xyz坐标为120,0,0
-	mesh3.position.set(100,100,0);//设置mesh3模型对象的xyz坐标为120,0,0
-	mesh4.position.set(-100,100,0);//设置mesh3模型对象的xyz坐标为120,0,0
-
-	/**
-	 * 创建两个网格模型并设置一个父对象group
-	 */
-	mesh1.name = "Box"; //网格模型1命名
-	mesh2.name = "Sphere"; //网格模型2命名
-	mesh3.name = "Box3"; //网格模型2命名
-	mesh4.name = "Box4"; //网格模型2命名
-	group.add(mesh1); //网格模型添加到组中
-	group.add(mesh2); //网格模型添加到组中
-	group.add(mesh3); //网格模型添加到组中
-	group.add(mesh4); //网格模型添加到组中
+	/** 创建两个网格模型并设置一个父对象group */// mesh1.name = "Box"; //网格模型1命名 mesh2.name = "Sphere"; //网格模型2命名 mesh3.name = "Box3"; //网格模型2命名 mesh4.name = "Box4"; //网格模型2命名 group.add(mesh1); //网格模型添加到组中 group.add(mesh2); //网格模型添加到组中 group.add(mesh3); //网格模型添加到组中 group.add(mesh4); //网格模型添加到组中
 	scene.add(group);
+
+
+	function posTrack(fromModel, targetModel) {
+		//创建位置关键帧对象：0时刻对应位置0, 0, 0   10时刻对应位置150, 0, 0
+		//mesh1,mesh2,[0,100]
+
+		let p1 = new THREE.Vector3(fromModel.position.x, fromModel.position.y, fromModel.position.z); //顶点1坐标
+		let p2 = new THREE.Vector3(targetModel.position.x, targetModel.position.y, targetModel.position.z); //顶点2坐标
+		//顶点坐标添加到geometry对象
+		geometry.vertices.push(p1, p2);
+		var material = new THREE.LineBasicMaterial({
+			color: 0xffff00,
+		});//材质对象
+		//线条模型对象
+		var line = new THREE.Line(geometry, material);
+		group.add(line); //线条对象添加到场景中
+
+		let meshSlideName = fromModel.name + "meshSlide";
+
+		var meshSlide = sphereMesh2(meshSlideName + "", 100, 20, 0);
+		meshSlide.material.color.set(0xffff00);
+		group.add(meshSlide)
+
+		// console.log(meshSlide)
+		let times = [0, 100];
+		let values = [
+			fromModel.position.x,
+			fromModel.position.y,
+			fromModel.position.z,
+
+			targetModel.position.x,
+			targetModel.position.y,
+			targetModel.position.z]; //与时间点对应的值组成的数组
+		let posTrack = new THREE.KeyframeTrack(meshSlideName + '.position', times, values);
+
+		return posTrack;
+	}
+
+	function scaleTrack(modelName, times, values) {
+		//创建颜色关键帧对象：10时刻对应颜色1, 0, 0   20时刻对应颜色0, 0, 1
+		// "name",[0,20],[1, 1, 1, 3, 3, 3]
+		var nameNode = scene.getObjectByName(modelName);
+		var scaleTrack = new THREE.KeyframeTrack(modelName + '.scale', times, values);
+
+		return scaleTrack;
+	}
+
+	function colorKF(modelName, times, values) {
+		//创建颜色关键帧对象：10时刻对应颜色1, 0, 0   20时刻对应颜色0, 0, 1
+		//"Box", [10, 20], [1, 0, 0, 0, 0, 1]
+		var nameNode = scene.getObjectByName(modelName);
+		var colorKF = new THREE.KeyframeTrack(modelName + '.material.color', times, values);
+		return colorKF;
+	}
+
+
 	/**
 	 * 编辑group子对象网格模型mesh1和mesh2的帧动画数据
 	 */
-   // 创建名为Box对象的关键帧数据
-	var times = [0, 100]; //关键帧时间数组，离散的时间点序列
-
-	//x ,y ,z
-	var values = [100, 100, 0, 0, 0, 0]; //与时间点对应的值组成的数组
-	// 创建位置关键帧对象：0时刻对应位置0, 0, 0   10时刻对应位置150, 0, 0
-	var posTrack = new THREE.KeyframeTrack('Box.position', times, values);
+			//x ,y ,z
+			// 创建位置关键帧对象：0时刻对应位置0, 0, 0   10时刻对应位置150, 0, 0
+	var posTrack1 = posTrack(mesh1, mesh2);
+	var posTrack2 = posTrack(mesh3, mesh2);
+	var posTrack3 = posTrack(mesh4, mesh2);
+	// var posTrack4 = posTrack(mesh5, mesh2);
 	// 创建颜色关键帧对象：10时刻对应颜色1, 0, 0   20时刻对应颜色0, 0, 1
-	var colorKF = new THREE.KeyframeTrack('Box.material.color', [10, 20], [1, 0, 0, 0, 0, 1]);
+	var colorKF1 = colorKF("Sphere", [10, 100], [1, 0, 0, 0, 0, 1]);
 	// 创建名为Sphere对象的关键帧数据  从0~20时间段，尺寸scale缩放3倍
-	var scaleTrack = new THREE.KeyframeTrack('Sphere.scale', [0, 20], [1, 1, 1, 3, 3, 3]);
+	var scaleTrack1 = scaleTrack("Sphere", [20, 40, 60, 80, 100], [1, 1, 1, 2, 2, 2, 1, 1, 1, 2, 2, 2, 1, 1, 1])
 
 	// duration决定了默认的播放时间，一般取所有帧动画的最大时间
 	// duration偏小，帧动画数据无法播放完，偏大，播放完帧动画会继续空播放
 	var duration = 100;
 	// 多个帧动画作为元素创建一个剪辑clip对象，命名"default"，持续时间20
-	var clip = new THREE.AnimationClip("default", duration, [posTrack, colorKF, scaleTrack]);
-
+	var clip = new THREE.AnimationClip("default", duration, [posTrack1, posTrack2, posTrack3, colorKF1, scaleTrack1]);
 
 	/**
 	 * 播放编辑好的关键帧数据
@@ -105,30 +136,106 @@
 	AnimationAction.play();//开始播放
 
 
-
-
-
 	// 球体网格模型创建函数
-	function sphereMesh(R, x, y, z) {
-		var geometry = new THREE.SphereGeometry(R, 25, 25); //球体几何体
+	function sphereMesh(thisName, x, y, z) {
+		var geometry = new THREE.SphereGeometry(20, 25, 25); //球体几何体
 		var material = new THREE.MeshPhongMaterial({
 			color: 0x0000ff
 		}); //材质对象Material
 		var mesh = new THREE.Mesh(geometry, material); // 创建网格模型对象
 		mesh.position.set(x, y, z);
+		group.add(mesh);
+		mesh.name = thisName;
+		addFont(mesh)
+		return mesh;
+	}
+
+	// 球体网格模型创建函数
+	function sphereMesh2(thisName, R, x, y, z) {
+		var geometry = new THREE.SphereGeometry(10, 25, 25); //球体几何体
+		var material = new THREE.MeshPhongMaterial({
+			color: 0x0000ff
+		}); //材质对象Material
+		var mesh = new THREE.Mesh(geometry, material); // 创建网格模型对象
+		mesh.position.set(x, y, z);
+		group.add(mesh);
+		mesh.name = thisName;
+
+		// return addTexture(geometry)
 		return mesh;
 	}
 
 	// 立方体网格模型创建函数
-	function boxMesh( x, y, z) {
-		var geometry = new THREE.BoxGeometry(x,y,z); //球体几何体
+	function boxMesh(thisName, x, y, z) {
+		var geometry = new THREE.BoxGeometry(30, 30, 30); //球体几何体
 		var material = new THREE.MeshPhongMaterial({
 			color: 0x0000ff
 		}); //材质对象Material
 		var mesh = new THREE.Mesh(geometry, material); // 创建网格模型对象
 		mesh.position.set(x, y, z);
+		group.add(mesh);
+		mesh.name = thisName;
+		addFont(mesh)
 		return mesh;
 	}
+
+
+	function addTexture(thisName, x, y, z) {
+		var geometry = new THREE.BoxGeometry(80, 40, 40); //立方体
+		// TextureLoader创建一个纹理加载器对象，可以加载图片作为几何体纹理
+		var textureLoader = new THREE.TextureLoader();
+		// 执行load方法，加载纹理贴图成功后，返回一个纹理对象Texture
+		textureLoader.load('../aMyTest/img/a.png', function (texture) {
+			var material = new THREE.MeshLambertMaterial({
+				// color: 0x0000ff,
+				// 设置颜色纹理贴图：Texture对象作为材质map属性的属性值
+				map: texture,//设置颜色贴图属性值
+			}); //材质对象Material
+			var mesh = new THREE.Mesh(geometry, material); //网格模型对象Mesh
+			mesh.position.set(x, y, z);
+			mesh.name = thisName;
+			addFont(mesh)
+			group.add(mesh); //网格模型添加到场景中
+			return mesh;
+			//纹理贴图加载成功后，调用渲染函数执行渲染操作
+			// render();
+		})
+
+	}
+
+	function addFont(meshObj) {
+		var loader = new THREE.FontLoader();
+
+		loader.load('../examples/fonts/gentilis_regular.typeface.json',
+				//加载好字体后创建三维文字
+				function (font) {
+
+					let geometry = new THREE.TextGeometry(meshObj.name, {
+						font: font,
+						size: 10,
+						height: 2,
+					});
+					//创建法向量材质
+					var meshMaterial = new THREE.MeshNormalMaterial({
+						flatShading: THREE.FlatShading,
+						transparent: true,
+						opacity: 1
+					});
+					var mesh = new THREE.Mesh(geometry, meshMaterial);
+					mesh.position.set(meshObj.position.x - 10, meshObj.position.y - 30, meshObj.position.z);
+					scene.add(mesh);
+				},
+				//加载进度
+				function (xhr) {
+					console.log((xhr.loaded / xhr.total * 100) + '% loaded');
+				},
+				//出现错误
+				function (err) {
+					console.log(err);
+				}
+		);
+	}
+
 	/**
 	 * 光源设置
 	 */
@@ -140,8 +247,8 @@
 	scene.add(ambient);
 
 	/**
-	* 正投影相机设置 相机设置
-	*/
+	 * 正投影相机设置 相机设置
+	 */
 	var width = window.innerWidth; //窗口宽度
 	var height = window.innerHeight; //窗口高度
 	var k = width / height; //窗口宽高比
@@ -162,9 +269,9 @@
 	document.body.appendChild(renderer.domElement); //body元素中插入canvas对象
 
 
-
 	// 创建一个时钟对象Clock
 	var clock = new THREE.Clock();
+
 	// 渲染函数
 	function render() {
 		renderer.render(scene, camera); //执行渲染操作
@@ -174,8 +281,8 @@
 		// 更新混合器相关的时间
 		mixer.update(clock.getDelta());
 	}
-	render();
 
+	render();
 
 
 	var controls = new THREE.OrbitControls(camera, renderer.domElement);//创建控件对象
