--- a/bTest/Creatingtext.html
+++ b/bTest/Creatingtext.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>拉伸扫描成型ExtrudeGeometry</title>
+	<title>第一个three.js文件_WebGL三维场景</title>
 	<style>
 		body {
 			margin: 0;
@@ -25,63 +25,67 @@
 	 * 创建场景对象Scene
 	 */
 	var scene = new THREE.Scene();
+	/**
+	 * 创建网格模型
+	 */
+// var geometry = new THREE.SphereGeometry(60, 40, 40); //创建一个球体几何对象
+// 	var geometry = new THREE.BoxGeometry(200, 200, 200); //创建一个立方体几何对象Geometry
 
+	addFont("hello,webgl");
+	var geometry;
 
+	function addFont(text) {
+		var loader = new THREE.FontLoader();
 
+		loader.load('../examples/fonts/gentilis_regular.typeface.json',
+				//加载好字体后创建三维文字
+				function (font) {
 
-	// 纹理贴图映射到一个矩形平面上
-	// var geometry = new THREE.PlaneGeometry(204, 102); //矩形平面
-	var geometry = new THREE.BoxGeometry(100, 50, 50); //立方体
-	// var geometry = new THREE.SphereGeometry(60, 25, 25); //球体
-	addTexture(geometry);
-	function addTexture(geometry) {
-		// TextureLoader创建一个纹理加载器对象，可以加载图片作为几何体纹理
-		var textureLoader = new THREE.TextureLoader();
-		// 执行load方法，加载纹理贴图成功后，返回一个纹理对象Texture
-		textureLoader.load('../aMyTest/img/a.png', function(texture) {
-			var material = new THREE.MeshLambertMaterial({
-				// color: 0x0000ff,
-				// 设置颜色纹理贴图：Texture对象作为材质map属性的属性值
-				map: texture,//设置颜色贴图属性值
-			}); //材质对象Material
-			var mesh = new THREE.Mesh(geometry, material); //网格模型对象Mesh
-			scene.add(mesh); //网格模型添加到场景中
-
-			//纹理贴图加载成功后，调用渲染函数执行渲染操作
-			// render();
-		})
-
+					geometry = new THREE.TextGeometry(text, {
+						font: font,
+						size: 10,
+						height: 2,
+					});
+					geometry.name=text;
+					//创建法向量材质
+					var meshMaterial = new THREE.MeshNormalMaterial({
+						flatShading: THREE.FlatShading,
+						transparent: true,
+						opacity: 1
+					});
+					var mesh = new THREE.Mesh(geometry, meshMaterial);
+					// mesh.position.set(-300, 0, 0);
+					scene.add(mesh);
+				},
+				//加载进度
+				function (xhr) {
+					console.log((xhr.loaded / xhr.total * 100) + '% loaded');
+				},
+				//出现错误
+				function (err) {
+					console.log(err);
+				}
+		);
 	}
 
 
-
-/*
-
-	// 图片加载器
-	var ImageLoader = new THREE.ImageLoader();
-	// load方法回调函数，按照路径加载图片，返回一个html的元素img对象
-	ImageLoader.load('../examples/textures/crate.gif', function(img) {
-		// image对象作为参数，创建一个纹理对象Texture
-		var texture = new THREE.Texture(img);
-		// 下次使用纹理时触发更新
-		texture.needsUpdate = true;
-		var material = new THREE.MeshLambertMaterial({
-			map: texture, //设置纹理贴图
-		});
-		var mesh = new THREE.Mesh(geometry, material); //网格模型对象Mesh
-		scene.add(mesh); //网格模型添加到场景中
-	});
-*/
-
+	var material = new THREE.MeshLambertMaterial({
+		color: 0x0000ff
+	}); //材质对象Material
+	var mesh = new THREE.Mesh(geometry, material); //网格模型对象Mesh
+	scene.add(mesh); //网格模型添加到场景中
 	/**
 	 * 光源设置
 	 */
+			//点光源
 	var point = new THREE.PointLight(0xffffff);
 	point.position.set(400, 200, 300); //点光源位置
 	scene.add(point); //点光源添加到场景中
 	//环境光
 	var ambient = new THREE.AmbientLight(0x444444);
 	scene.add(ambient);
+	// console.log(scene)
+	// console.log(scene.children)
 	/**
 	 * 相机设置
 	 */
@@ -91,7 +95,7 @@
 	var s = 200; //三维场景显示范围控制系数，系数越大，显示的范围越大
 	//创建相机对象
 	var camera = new THREE.OrthographicCamera(-s * k, s * k, s, -s, 1, 1000);
-	camera.position.set(100, 100, 400); //设置相机位置
+	camera.position.set(400, 300, 200); //设置相机位置
 	camera.lookAt(scene.position); //设置相机方向(指向的场景对象)
 	/**
 	 * 创建渲染器对象
@@ -100,6 +104,7 @@
 	renderer.setSize(width, height);//设置渲染区域尺寸
 	renderer.setClearColor(0xb9d3ff, 1); //设置背景颜色
 	document.body.appendChild(renderer.domElement); //body元素中插入canvas对象
+	//执行渲染操作   指定场景、相机作为参数
 
 	function render() {
 		renderer.render(scene, camera);//执行渲染操作
@@ -108,11 +113,8 @@
 
 	render();
 	var controls = new THREE.OrbitControls(camera, renderer.domElement);//创建控件对象
-
-
-	//辅助线
-	var axisHelper = new THREE.AxisHelper(250);
-	scene.add(axisHelper);
+	// var controls = new THREE.OrbitControls(camera);//创建控件对象
+	// controls.addEventListener('change', render);//监听鼠标、键盘事件
 
 
 </script>
