修改自己的案例提交

--- a/aMyTest/demo11test.html
+++ b/aMyTest/demo11test.html
@@ -31,15 +31,15 @@
 	var geometry = new THREE.Geometry(); //声明一个几何体对象Geometry
 
 
-	var mesh1 = boxMesh("Box", 130, 30, 0);
+	var mesh1 = boxMesh("Box", 130, 130, 0);
 
 	var mesh2 = sphereMesh("Sphere", 0, 0, 0);
 	var mesh3 = boxMesh("Box3", -150, 150, 0);
-	var mesh4 = sphereMesh("Box4", 100, -100, 0);
-	var mesh5 = addTexture("aaaaa", 130, 130, 0);//sphereMesh("Box4", 100, -100, 0);
-	console.log("mersh5")
-	console.log(mesh4)
-	console.log(mesh5)
+	var mesh4 = boxMesh("Box4", 100, -100, 0);
+	// let mesh5 =  addTexture("aaaaa", 130, 130, 0);//sphereMesh("Box4", 100, -100, 0);
+	// console.log("mersh5")
+	// console.log(mesh4)
+	// console.log(mesh5)
 
 	// mesh1.position.set(120, 120, 0);//设置mesh3模型对象的xyz坐标为120,0,0
 	// mesh3.position.set(-150, 100, 0);//设置mesh3模型对象的xyz坐标为120,0,0
@@ -152,7 +152,7 @@
 
 	// 球体网格模型创建函数
 	function sphereMesh2(thisName, R, x, y, z) {
-		var geometry = new THREE.SphereGeometry(10, 25, 25); //球体几何体
+		var geometry = new THREE.SphereGeometry(5, 10, 10); //球体几何体
 		var material = new THREE.MeshPhongMaterial({
 			color: 0x0000ff
 		}); //材质对象Material
@@ -167,9 +167,11 @@
 
 	// 立方体网格模型创建函数
 	function boxMesh(thisName, x, y, z) {
-		var geometry = new THREE.BoxGeometry(30, 30, 30); //球体几何体
+		var texture = new THREE.TextureLoader().load('../aMyTest/img/a.png');
+		var geometry = new THREE.BoxGeometry(80, 30, 30); //球体几何体
 		var material = new THREE.MeshPhongMaterial({
-			color: 0x0000ff
+			// color: 0x0000ff,
+			map: texture,//设置颜色贴图属性值
 		}); //材质对象Material
 		var mesh = new THREE.Mesh(geometry, material); // 创建网格模型对象
 		mesh.position.set(x, y, z);
@@ -179,27 +181,23 @@
 		return mesh;
 	}
 
-
-	function addTexture(thisName, x, y, z) {
-		var geometry = new THREE.BoxGeometry(80, 40, 40); //立方体
+	 function addTexture(thisName, x, y, z) {
 		// TextureLoader创建一个纹理加载器对象，可以加载图片作为几何体纹理
-		var textureLoader = new THREE.TextureLoader();
 		// 执行load方法，加载纹理贴图成功后，返回一个纹理对象Texture
-		textureLoader.load('../aMyTest/img/a.png', function (texture) {
-			var material = new THREE.MeshLambertMaterial({
-				// color: 0x0000ff,
-				// 设置颜色纹理贴图：Texture对象作为材质map属性的属性值
-				map: texture,//设置颜色贴图属性值
-			}); //材质对象Material
-			var mesh = new THREE.Mesh(geometry, material); //网格模型对象Mesh
-			mesh.position.set(x, y, z);
-			mesh.name = thisName;
-			addFont(mesh)
-			group.add(mesh); //网格模型添加到场景中
-			return mesh;
-			//纹理贴图加载成功后，调用渲染函数执行渲染操作
-			// render();
-		})
+		 var texture = new THREE.TextureLoader().load('../aMyTest/img/a.png');
+		 var geometry = new THREE.BoxGeometry(80, 40, 40); //立方体
+		 var material = new THREE.MeshLambertMaterial({
+			 // var material = new THREE.MeshBasicMaterial({
+			 // color: 0x0000ff,
+			 // 设置颜色纹理贴图：Texture对象作为材质map属性的属性值
+			 map: texture,//设置颜色贴图属性值
+		 }); //材质对象Material
+		 var mesh = new THREE.Mesh(geometry, material); //网格模型对象Mesh
+		 mesh.position.set(x, y, z);
+		 mesh.name = thisName;
+		 addFont(mesh)
+		 group.add(mesh); //网格模型添加到场景中
+		 return mesh;
 
 	}
 
@@ -257,7 +255,7 @@
 	// 构造函数格式
 	// OrthographicCamera( left, right, top, bottom, near, far )
 	var camera = new THREE.OrthographicCamera(-s * k, s * k, s, -s, 1, 1000);
-	camera.position.set(200, 200, 200); //设置相机位置
+	camera.position.set(0, 50, 400); //设置相机位置
 	camera.lookAt(scene.position); //设置相机方向(指向的场景对象)
 
 	/**
